--- a/tests/cassettes/test_beta_referral_customer_refund_by_payment_log.yaml
+++ b/tests/cassettes/test_beta_referral_customer_refund_by_payment_log.yaml
@@ -39,6 +39,8 @@ interactions:
       - max-age=31536000; includeSubDomains; preload
       transfer-encoding:
       - chunked
+      vary:
+      - Origin
       x-backend:
       - easypost
       x-content-type-options:
@@ -46,20 +48,21 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 52d122c2639a09fbe78a024400089cf0
+      - 477e8d7f64626275e786c93f0019febb
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb8nuq
+      - bigweb3nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq 29913d444b
-      - extlb2nuq 29913d444b
+      - intlb1nuq a29e4ad05c
+      - intlb2wdc a29e4ad05c
+      - extlb3wdc 5ab12a3ed2
       x-runtime:
-      - '0.042947'
+      - '0.036367'
       x-version-label:
-      - easypost-202212132312-d72b368b58-master
+      - easypost-202305122104-29dd2d738a-master
       x-xss-protection:
       - 1; mode=block
     status:
