--- a/tests/cassettes/test_beta_retrieve_carrier_metadata.yaml
+++ b/tests/cassettes/test_beta_retrieve_carrier_metadata.yaml
@@ -1482,46 +1482,48 @@ interactions:
         "description": null, "dimensions": [], "human_readable": null, "max_weight":
         null, "name": "TrackedReturns24"}, {"carrier": "royalmail", "description":
         null, "dimensions": [], "human_readable": null, "max_weight": null, "name":
-        "TrackedReturns48"}], "shipment_options": [{"carrier": "royalmail", "deprecated":
-        false, "description": null, "human_readable": "Carrier Insurance Amount",
-        "name": "carrier_insurance_amount", "type": "float"}, {"carrier": "royalmail",
-        "deprecated": false, "description": null, "human_readable": "Carrier Notification
-        Email", "name": "carrier_notification_email", "type": "boolean"}, {"carrier":
-        "royalmail", "deprecated": false, "description": null, "human_readable": "Carrier
-        Notification Sms", "name": "carrier_notification_sms", "type": "boolean"},
+        "TrackedReturns48"}, {"carrier": "royalmail", "description": null, "dimensions":
+        [], "human_readable": null, "max_weight": null, "name": "CrossBorderImportTracked48HighVolume"}],
+        "shipment_options": [{"carrier": "royalmail", "deprecated": false, "description":
+        null, "human_readable": "Carrier Insurance Amount", "name": "carrier_insurance_amount",
+        "type": "float"}, {"carrier": "royalmail", "deprecated": false, "description":
+        null, "human_readable": "Carrier Notification Email", "name": "carrier_notification_email",
+        "type": "boolean"}, {"carrier": "royalmail", "deprecated": false, "description":
+        null, "human_readable": "Carrier Notification Sms", "name": "carrier_notification_sms",
+        "type": "boolean"}, {"carrier": "royalmail", "deprecated": true, "description":
+        null, "human_readable": "Date Advance", "name": "date_advance", "type": "integer"},
         {"carrier": "royalmail", "deprecated": true, "description": null, "human_readable":
-        "Date Advance", "name": "date_advance", "type": "integer"}, {"carrier": "royalmail",
-        "deprecated": true, "description": null, "human_readable": "Delivered Duty
-        Paid", "name": "delivered_duty_paid", "type": "boolean"}, {"carrier": "royalmail",
-        "deprecated": false, "description": null, "human_readable": "Delivery Confirmation",
-        "name": "delivery_confirmation", "type": "string"}, {"carrier": "royalmail",
-        "deprecated": false, "description": null, "human_readable": "Handling Instructions",
-        "name": "handling_instructions", "type": "string"}, {"carrier": "royalmail",
-        "deprecated": false, "description": null, "human_readable": "Import Federal
-        Tax Id", "name": "import_federal_tax_id", "type": "string"}, {"carrier": "royalmail",
-        "deprecated": false, "description": null, "human_readable": "Incoterm", "name":
-        "incoterm", "type": "enum"}, {"carrier": "royalmail", "deprecated": false,
-        "description": null, "human_readable": "Invoice Number", "name": "invoice_number",
-        "type": "string"}, {"carrier": "royalmail", "deprecated": false, "description":
-        null, "human_readable": "Label Date", "name": "label_date", "type": "datetime"},
+        "Delivered Duty Paid", "name": "delivered_duty_paid", "type": "boolean"},
         {"carrier": "royalmail", "deprecated": false, "description": null, "human_readable":
-        "Label Format", "name": "label_format", "type": "string"}, {"carrier": "royalmail",
-        "deprecated": false, "description": null, "human_readable": "License Number",
-        "name": "license_number", "type": "string"}, {"carrier": "royalmail", "deprecated":
-        true, "description": null, "human_readable": "Print Custom 1", "name": "print_custom_1",
-        "type": "string"}, {"carrier": "royalmail", "deprecated": true, "description":
-        null, "human_readable": "Print Custom 2", "name": "print_custom_2", "type":
-        "string"}, {"carrier": "royalmail", "deprecated": false, "description": null,
-        "human_readable": "Saturday Delivery", "name": "saturday_delivery", "type":
-        "boolean"}], "supported_features": [{"carrier": "royalmail", "description":
-        null, "name": "labels", "supported": true}, {"carrier": "royalmail", "description":
-        null, "name": "orders", "supported": false}, {"carrier": "royalmail", "description":
-        null, "name": "pickups", "supported": false}, {"carrier": "royalmail", "description":
-        null, "name": "refunds", "supported": true}, {"carrier": "royalmail", "description":
-        null, "name": "returns", "supported": true}, {"carrier": "royalmail", "description":
-        null, "name": "scanforms", "supported": true}, {"carrier": "royalmail", "description":
-        null, "name": "rating", "supported": true}, {"carrier": "royalmail", "description":
-        null, "name": "tracking", "supported": true}, {"carrier": "royalmail", "description":
+        "Delivery Confirmation", "name": "delivery_confirmation", "type": "string"},
+        {"carrier": "royalmail", "deprecated": false, "description": null, "human_readable":
+        "Handling Instructions", "name": "handling_instructions", "type": "string"},
+        {"carrier": "royalmail", "deprecated": false, "description": null, "human_readable":
+        "Import Federal Tax Id", "name": "import_federal_tax_id", "type": "string"},
+        {"carrier": "royalmail", "deprecated": false, "description": null, "human_readable":
+        "Incoterm", "name": "incoterm", "type": "enum"}, {"carrier": "royalmail",
+        "deprecated": false, "description": null, "human_readable": "Invoice Number",
+        "name": "invoice_number", "type": "string"}, {"carrier": "royalmail", "deprecated":
+        false, "description": null, "human_readable": "Label Date", "name": "label_date",
+        "type": "datetime"}, {"carrier": "royalmail", "deprecated": false, "description":
+        null, "human_readable": "Label Format", "name": "label_format", "type": "string"},
+        {"carrier": "royalmail", "deprecated": false, "description": null, "human_readable":
+        "License Number", "name": "license_number", "type": "string"}, {"carrier":
+        "royalmail", "deprecated": true, "description": null, "human_readable": "Print
+        Custom 1", "name": "print_custom_1", "type": "string"}, {"carrier": "royalmail",
+        "deprecated": true, "description": null, "human_readable": "Print Custom 2",
+        "name": "print_custom_2", "type": "string"}, {"carrier": "royalmail", "deprecated":
+        false, "description": null, "human_readable": "Saturday Delivery", "name":
+        "saturday_delivery", "type": "boolean"}], "supported_features": [{"carrier":
+        "royalmail", "description": null, "name": "labels", "supported": true}, {"carrier":
+        "royalmail", "description": null, "name": "orders", "supported": false}, {"carrier":
+        "royalmail", "description": null, "name": "pickups", "supported": false},
+        {"carrier": "royalmail", "description": null, "name": "refunds", "supported":
+        true}, {"carrier": "royalmail", "description": null, "name": "returns", "supported":
+        true}, {"carrier": "royalmail", "description": null, "name": "scanforms",
+        "supported": true}, {"carrier": "royalmail", "description": null, "name":
+        "rating", "supported": true}, {"carrier": "royalmail", "description": null,
+        "name": "tracking", "supported": true}, {"carrier": "royalmail", "description":
         null, "name": "bill_on_label_purchase", "supported": false}, {"carrier": "royalmail",
         "description": null, "name": "bill_on_delivery", "supported": false}, {"carrier":
         "royalmail", "description": null, "name": "bill_on_scan", "supported": false},
@@ -1669,67 +1671,69 @@ interactions:
         [], "service_levels": [], "shipment_options": [], "supported_features": []},
         {"human_readable": "UPS Mail Innovations", "name": "upsmailinnovations", "predefined_packages":
         [], "service_levels": [{"carrier": "upsmailinnovations", "description": null,
-        "dimensions": [], "human_readable": null, "max_weight": null, "name": "First"},
+        "dimensions": [], "human_readable": null, "max_weight": null, "name": "EconomyMailInnovations"},
         {"carrier": "upsmailinnovations", "description": null, "dimensions": [], "human_readable":
-        null, "max_weight": null, "name": "Priority"}, {"carrier": "upsmailinnovations",
+        null, "max_weight": null, "name": "ExpeditedMailInnovations"}, {"carrier":
+        "upsmailinnovations", "description": null, "dimensions": [], "human_readable":
+        null, "max_weight": null, "name": "First"}, {"carrier": "upsmailinnovations",
         "description": null, "dimensions": [], "human_readable": null, "max_weight":
-        null, "name": "ExpeditedMailInnovations"}, {"carrier": "upsmailinnovations",
+        null, "name": "Priority"}, {"carrier": "upsmailinnovations", "description":
+        null, "dimensions": [], "human_readable": null, "max_weight": null, "name":
+        "PriorityMailInnovations"}, {"carrier": "upsmailinnovations", "description":
+        null, "dimensions": [], "human_readable": null, "max_weight": null, "name":
+        "SingleReturns"}], "shipment_options": [], "supported_features": []}, {"human_readable":
+        "USPS", "name": "usps", "predefined_packages": [{"carrier": "usps", "description":
+        null, "dimensions": [], "human_readable": null, "max_weight": null, "name":
+        "Card"}, {"carrier": "usps", "description": null, "dimensions": [], "human_readable":
+        null, "max_weight": null, "name": "Letter"}, {"carrier": "usps", "description":
+        null, "dimensions": [], "human_readable": null, "max_weight": null, "name":
+        "Flat"}, {"carrier": "usps", "description": null, "dimensions": [], "human_readable":
+        null, "max_weight": null, "name": "FlatRateEnvelope"}, {"carrier": "usps",
         "description": null, "dimensions": [], "human_readable": null, "max_weight":
-        null, "name": "PriorityMailInnovations"}, {"carrier": "upsmailinnovations",
-        "description": null, "dimensions": [], "human_readable": null, "max_weight":
-        null, "name": "EconomyMailInnovations"}], "shipment_options": [], "supported_features":
-        []}, {"human_readable": "USPS", "name": "usps", "predefined_packages": [{"carrier":
-        "usps", "description": null, "dimensions": [], "human_readable": null, "max_weight":
-        null, "name": "Card"}, {"carrier": "usps", "description": null, "dimensions":
-        [], "human_readable": null, "max_weight": null, "name": "Letter"}, {"carrier":
-        "usps", "description": null, "dimensions": [], "human_readable": null, "max_weight":
-        null, "name": "Flat"}, {"carrier": "usps", "description": null, "dimensions":
-        [], "human_readable": null, "max_weight": null, "name": "FlatRateEnvelope"},
+        null, "name": "FlatRateLegalEnvelope"}, {"carrier": "usps", "description":
+        null, "dimensions": [], "human_readable": null, "max_weight": null, "name":
+        "FlatRatePaddedEnvelope"}, {"carrier": "usps", "description": null, "dimensions":
+        [], "human_readable": null, "max_weight": null, "name": "FlatRateGiftCardEnvelope"},
         {"carrier": "usps", "description": null, "dimensions": [], "human_readable":
-        null, "max_weight": null, "name": "FlatRateLegalEnvelope"}, {"carrier": "usps",
+        null, "max_weight": null, "name": "FlatRateWindowEnvelope"}, {"carrier": "usps",
         "description": null, "dimensions": [], "human_readable": null, "max_weight":
-        null, "name": "FlatRatePaddedEnvelope"}, {"carrier": "usps", "description":
+        null, "name": "FlatRateCardboardEnvelope"}, {"carrier": "usps", "description":
         null, "dimensions": [], "human_readable": null, "max_weight": null, "name":
-        "FlatRateGiftCardEnvelope"}, {"carrier": "usps", "description": null, "dimensions":
-        [], "human_readable": null, "max_weight": null, "name": "FlatRateWindowEnvelope"},
-        {"carrier": "usps", "description": null, "dimensions": [], "human_readable":
-        null, "max_weight": null, "name": "FlatRateCardboardEnvelope"}, {"carrier":
+        "SmallFlatRateEnvelope"}, {"carrier": "usps", "description": null, "dimensions":
+        [], "human_readable": null, "max_weight": null, "name": "Parcel"}, {"carrier":
         "usps", "description": null, "dimensions": [], "human_readable": null, "max_weight":
-        null, "name": "SmallFlatRateEnvelope"}, {"carrier": "usps", "description":
-        null, "dimensions": [], "human_readable": null, "max_weight": null, "name":
-        "Parcel"}, {"carrier": "usps", "description": null, "dimensions": [], "human_readable":
-        null, "max_weight": null, "name": "SoftPack"}, {"carrier": "usps", "description":
-        null, "dimensions": [], "human_readable": null, "max_weight": null, "name":
-        "SmallFlatRateBox"}, {"carrier": "usps", "description": null, "dimensions":
-        [], "human_readable": null, "max_weight": null, "name": "MediumFlatRateBox"},
+        null, "name": "SoftPack"}, {"carrier": "usps", "description": null, "dimensions":
+        [], "human_readable": null, "max_weight": null, "name": "SmallFlatRateBox"},
         {"carrier": "usps", "description": null, "dimensions": [], "human_readable":
-        null, "max_weight": null, "name": "LargeFlatRateBox"}, {"carrier": "usps",
+        null, "max_weight": null, "name": "MediumFlatRateBox"}, {"carrier": "usps",
         "description": null, "dimensions": [], "human_readable": null, "max_weight":
-        null, "name": "LargeFlatRateBoxAPOFPO"}, {"carrier": "usps", "description":
+        null, "name": "LargeFlatRateBox"}, {"carrier": "usps", "description": null,
+        "dimensions": [], "human_readable": null, "max_weight": null, "name": "LargeFlatRateBoxAPOFPO"},
+        {"carrier": "usps", "description": null, "dimensions": [], "human_readable":
+        null, "max_weight": null, "name": "FlatTubTrayBox"}, {"carrier": "usps", "description":
         null, "dimensions": [], "human_readable": null, "max_weight": null, "name":
-        "FlatTubTrayBox"}, {"carrier": "usps", "description": null, "dimensions":
-        [], "human_readable": null, "max_weight": null, "name": "EMMTrayBox"}, {"carrier":
+        "EMMTrayBox"}, {"carrier": "usps", "description": null, "dimensions": [],
+        "human_readable": null, "max_weight": null, "name": "FullTrayBox"}, {"carrier":
         "usps", "description": null, "dimensions": [], "human_readable": null, "max_weight":
-        null, "name": "FullTrayBox"}, {"carrier": "usps", "description": null, "dimensions":
-        [], "human_readable": null, "max_weight": null, "name": "HalfTrayBox"}, {"carrier":
-        "usps", "description": null, "dimensions": [], "human_readable": null, "max_weight":
-        null, "name": "PMODSack"}], "service_levels": [{"carrier": "usps", "description":
-        "1-3 days", "dimensions": ["22in x 18in x 15in"], "human_readable": null,
-        "max_weight": 15.99, "name": "First"}, {"carrier": "usps", "description":
-        "2-3 days", "dimensions": ["Combined Length and Girth < 108in"], "human_readable":
-        null, "max_weight": 1120.0, "name": "Priority"}, {"carrier": "usps", "description":
-        "1-2 days", "dimensions": ["Combined Length and Girth < 108in"], "human_readable":
-        null, "max_weight": 1120.0, "name": "Express"}, {"carrier": "usps", "description":
-        "2-8 business days", "dimensions": ["Combined Length and Girth < 108in"],
-        "human_readable": null, "max_weight": 1120.0, "name": "ParcelSelect"}, {"carrier":
-        "usps", "description": "2-8 business days", "dimensions": ["Combined Length
+        null, "name": "HalfTrayBox"}, {"carrier": "usps", "description": null, "dimensions":
+        [], "human_readable": null, "max_weight": null, "name": "PMODSack"}], "service_levels":
+        [{"carrier": "usps", "description": "1-3 days", "dimensions": ["22in x 18in
+        x 15in"], "human_readable": null, "max_weight": 15.99, "name": "First"}, {"carrier":
+        "usps", "description": "2-3 days", "dimensions": ["Combined Length and Girth
+        < 108in"], "human_readable": null, "max_weight": 1120.0, "name": "Priority"},
+        {"carrier": "usps", "description": "1-2 days", "dimensions": ["Combined Length
         and Girth < 108in"], "human_readable": null, "max_weight": 1120.0, "name":
-        "LibraryMail"}, {"carrier": "usps", "description": "2-8 business days", "dimensions":
+        "Express"}, {"carrier": "usps", "description": "2-8 business days", "dimensions":
         ["Combined Length and Girth < 108in"], "human_readable": null, "max_weight":
-        1120.0, "name": "MediaMail"}, {"carrier": "usps", "description": null, "dimensions":
-        [], "human_readable": null, "max_weight": null, "name": "FirstClassMailInternational"},
-        {"carrier": "usps", "description": "7-21 days", "dimensions": ["Combined Length
-        and Girth < 108in"], "human_readable": null, "max_weight": 64.0, "name": "FirstClassPackageInternationalService"},
+        1120.0, "name": "ParcelSelect"}, {"carrier": "usps", "description": "2-8 business
+        days", "dimensions": ["Combined Length and Girth < 108in"], "human_readable":
+        null, "max_weight": 1120.0, "name": "LibraryMail"}, {"carrier": "usps", "description":
+        "2-8 business days", "dimensions": ["Combined Length and Girth < 108in"],
+        "human_readable": null, "max_weight": 1120.0, "name": "MediaMail"}, {"carrier":
+        "usps", "description": null, "dimensions": [], "human_readable": null, "max_weight":
+        null, "name": "FirstClassMailInternational"}, {"carrier": "usps", "description":
+        "7-21 days", "dimensions": ["Combined Length and Girth < 108in"], "human_readable":
+        null, "max_weight": 64.0, "name": "FirstClassPackageInternationalService"},
         {"carrier": "usps", "description": "6-10 business days", "dimensions": ["Combined
         Length and Girth < 108in"], "human_readable": null, "max_weight": 1120.0,
         "name": "PriorityMailInternational"}, {"carrier": "usps", "description": "3-5
@@ -1746,11 +1750,11 @@ interactions:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '128470'
+      - '128746'
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"4891eb0e7e949236650c8e213bf027c6"
+      - W/"0b770e61a0767b4c16d7670d9fc5cf01"
       expires:
       - '0'
       pragma:
@@ -1770,20 +1774,21 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - cb22002c643dcc34e7885d210016aed5
+      - 477e8d8364626270e786c9210019fc4d
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb1nuq
+      - bigweb8nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
       - intlb1nuq a29e4ad05c
-      - extlb2nuq a29e4ad05c
+      - intlb2wdc a29e4ad05c
+      - extlb3wdc 5ab12a3ed2
       x-runtime:
-      - '0.145759'
+      - '0.148368'
       x-version-label:
-      - easypost-202304172058-4c7088be6d-master
+      - easypost-202305122104-29dd2d738a-master
       x-xss-protection:
       - 1; mode=block
     status:
