--- a/tests/cassettes/test_beta_retrieve_carrier_metadata_with_filters.yaml
+++ b/tests/cassettes/test_beta_retrieve_carrier_metadata_with_filters.yaml
@@ -101,20 +101,21 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - eebf4dfe643dcd0fe7885da30016a3dd
+      - 477e8d8564626270e786c9220019fcab
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb1nuq
+      - bigweb11nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
       - intlb1nuq a29e4ad05c
-      - extlb1nuq a29e4ad05c
+      - intlb1wdc a29e4ad05c
+      - extlb3wdc 5ab12a3ed2
       x-runtime:
-      - '0.027778'
+      - '0.025861'
       x-version-label:
-      - easypost-202304172058-4c7088be6d-master
+      - easypost-202305122104-29dd2d738a-master
       x-xss-protection:
       - 1; mode=block
     status:
